--- a/index.html
+++ b/index.html
@@ -67,6 +67,30 @@
             <div class="swiper-button-next"></div>
                     
         </div>
+
+        <div class="card">
+            <!--primeira linha-->
+            <div class="card__descricao">
+                <!--primeira coluna-->
+                <div class="descricao">
+                    <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                    <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                    <p class="descricao__texxto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    <!--segunda coluna-->
+                    <img src="Img/Angular.svg" class="descricao__imagem">
+                </div>
+                <!--segunda linha-->
+                <div class="card__botao">
+                    <!--primeira coluna-->
+                    <ul class="botao">
+                        <li class="botao__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+                        <li class="botao__item"><img src="img/Compras.svg" alt="adicionar no carrinho"></li>
+                    </ul>
+                    <!-- segunda coluna-->
+                    <a href="#" class="botoes__ancora">Saiba mais</a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
